==> ndrs-pst/zephyr_rtos/drivers/gpio/gpio_stm32.c <==
#define DT_DRV_COMPAT st_stm32_gpio
#include <errno.h>
#include <zephyr/kernel.h>
#include <zephyr/device.h>
#include <soc.h>
#include <stm32_ll_bus.h>
#include <stm32_ll_exti.h>
#include <stm32_ll_gpio.h>
#include <stm32_ll_pwr.h>
#include <stm32_ll_system.h>
#include <zephyr/drivers/gpio.h>
#include <zephyr/drivers/clock_control/stm32_clock_control.h>
#include <zephyr/sys/util.h>
#include <zephyr/drivers/interrupt_controller/exti_stm32.h>
#include <zephyr/pm/device.h>
#include <zephyr/pm/device_runtime.h>
#include <zephyr/drivers/misc/stm32_wkup_pins/stm32_wkup_pins.h>
#include <zephyr/dt-bindings/gpio/stm32-gpio.h>
#include "stm32_hsem.h"
#include "gpio_stm32.h"
#include <zephyr/drivers/gpio/gpio_utils.h>
#include <zephyr/logging/log.h>

static void gpio_stm32_isr(int line, void* arg) {
    struct gpio_stm32_data* data = arg;

    gpio_fire_callbacks(&data->cb, data->dev, BIT(line));
}

static int gpio_stm32_port_get_raw(const struct device* dev, uint32_t* value) {
    const struct gpio_stm32_config* cfg  = dev->config;
    GPIO_TypeDef* gpio = cfg->base;

    *value = LL_GPIO_ReadInputPort(gpio);

    return (0);
}

static int gpio_stm32_port_set_masked_raw(const struct device* dev,
                                          gpio_port_pins_t mask,
                                          gpio_port_value_t value) {
    const struct gpio_stm32_config* cfg  = dev->config;
    GPIO_TypeDef* gpio = cfg->base;
    uint32_t port_value;

    z_stm32_hsem_lock(CFG_HW_GPIO_SEMID, HSEM_LOCK_DEFAULT_RETRY);

    port_value = LL_GPIO_ReadOutputPort(gpio);
    LL_GPIO_WriteOutputPort(gpio, (port_value & ~mask) | (mask & value));

    z_stm32_hsem_unlock(CFG_HW_GPIO_SEMID);

    return (0);
}

static int gpio_stm32_port_set_bits_raw(const struct device* dev,
                                        gpio_port_pins_t pins) {
    const struct gpio_stm32_config* cfg  = dev->config;
    GPIO_TypeDef* gpio = cfg->base;

    /*
     * On F1 series, using LL API requires a costly pin mask translation.
     * Skip it and use CMSIS API directly. Valid also on other series.
     */
    WRITE_REG(gpio->BSRR, pins);

    return (0);
}

static int gpio_stm32_port_clear_bits_raw(const struct device* dev,
                                          gpio_port_pins_t pins) {
    const struct gpio_stm32_config* cfg  = dev->config;
    GPIO_TypeDef* gpio = cfg->base;

    #ifdef CONFIG_SOC_SERIES_STM32F1X
    /*
     * On F1 series, using LL API requires a costly pin mask translation.
     * Skip it and use CMSIS API directly.
     */
    WRITE_REG(gpio->BRR, pins);
    #else
    /* On other series, LL abstraction is needed  */
    LL_GPIO_ResetOutputPin(gpio, pins);
    #endif

    return (0);
}

static int gpio_stm32_port_toggle_bits(const struct device* dev,
                                       gpio_port_pins_t pins) {
    const struct gpio_stm32_config* cfg  = dev->config;
    GPIO_TypeDef* gpio = cfg->base;

    /*
     * On F1 series, using LL API requires a costly pin mask translation.
     * Skip it and use CMSIS API directly. Valid also on other series.
     */
    z_stm32_hsem_lock(CFG_HW_GPIO_SEMID, HSEM_LOCK_DEFAULT_RETRY);
    WRITE_REG(gpio->ODR, READ_REG(gpio->ODR) ^ pins);
    z_stm32_hsem_unlock(CFG_HW_GPIO_SEMID);

    return (0);
}

static int gpio_stm32_config(const struct device* dev,
                             gpio_pin_t pin, gpio_flags_t flags) {
    int err;
    int pincfg;

    /* figure out if we can map the requested GPIO
     * configuration
     */
    err = gpio_stm32_flags_to_conf(flags, &pincfg);
    if (err != 0) {
        return (err);
    }

    /* Enable device clock before configuration (requires bank writes) */
    if (((flags & GPIO_OUTPUT) != 0) || ((flags & GPIO_INPUT) != 0)) {
        err = pm_device_runtime_get(dev);
        if (err < 0) {
            return (err);
        }
    }

    if ((flags & GPIO_OUTPUT) != 0) {
        if ((flags & GPIO_OUTPUT_INIT_HIGH) != 0) {
            gpio_stm32_port_set_bits_raw(dev, BIT(pin));
        }
        else if ((flags & GPIO_OUTPUT_INIT_LOW) != 0) {
            gpio_stm32_port_clear_bits_raw(dev, BIT(pin));
        }
    }

    gpio_stm32_configure_raw(dev, pin, pincfg, 0);

    #ifdef CONFIG_STM32_WKUP_PINS
    if (flags & STM32_GPIO_WKUP) {
        #ifdef CONFIG_POWEROFF
        struct gpio_dt_spec gpio_dt_cfg = {
            .port = dev,
            .pin = pin,
            .dt_flags = (gpio_dt_flags_t)flags,
        };

        if (stm32_pwr_wkup_pin_cfg_gpio((const struct gpio_dt_spec *)&gpio_dt_cfg)) {
            LOG_ERR("Could not configure GPIO %s pin %d as a wake-up source",
                    gpio_dt_cfg.port->name, gpio_dt_cfg.pin);
        }
        #else
        LOG_DBG("STM32_GPIO_WKUP flag has no effect when CONFIG_POWEROFF=n");
        #endif /* CONFIG_POWEROFF */
    }
    #endif /* CONFIG_STM32_WKUP_PINS */

    /* Release clock only if pin is disconnected */
    if (((flags & GPIO_OUTPUT) == 0) && ((flags & GPIO_INPUT) == 0)) {
        err = pm_device_runtime_put(dev);
        if (err < 0) {
            return (err);
        }
    }

    return (0);
}

static int gpio_stm32_pin_interrupt_configure(const struct device* dev,
                                              gpio_pin_t pin,
                                              enum gpio_int_mode mode,
                                              enum gpio_int_trig trig) {
    const struct gpio_stm32_config* cfg  = dev->config;
    struct gpio_stm32_data* data = dev->data;
    int edge;
    int err = 0;

    #ifdef CONFIG_GPIO_ENABLE_DISABLE_INTERRUPT
    if (mode == GPIO_INT_MODE_DISABLE_ONLY) {
        stm32_exti_disable(pin);
        goto exit;
    }
    else if (mode == GPIO_INT_MODE_ENABLE_ONLY) {
        stm32_exti_enable(pin);
        goto exit;
    }
    #endif /* CONFIG_GPIO_ENABLE_DISABLE_INTERRUPT */

    if (mode == GPIO_INT_MODE_DISABLED) {
        if (gpio_stm32_get_exti_source(pin) == cfg->port) {
            stm32_exti_disable(pin);
            stm32_exti_unset_callback(pin);
            stm32_exti_trigger(pin, STM32_EXTI_TRIG_NONE);
        }
        /* else: No irq source configured for pin. Nothing to disable */
        goto exit;
    }

    /* Level trigger interrupts not supported */
    if (mode == GPIO_INT_MODE_LEVEL) {
        err = -ENOTSUP;
        goto exit;
    }

    if (stm32_exti_set_callback(pin, gpio_stm32_isr, data) != 0) {
        err = -EBUSY;
        goto exit;
    }

    switch (trig) {
        case GPIO_INT_TRIG_LOW :
            edge = STM32_EXTI_TRIG_FALLING;
            break;

        case GPIO_INT_TRIG_HIGH :
            edge = STM32_EXTI_TRIG_RISING;
            break;

        case GPIO_INT_TRIG_BOTH :
            edge = STM32_EXTI_TRIG_BOTH;
            break;

        default :
            err = -EINVAL;
            goto exit;
    }

    gpio_stm32_enable_int(cfg->port, pin);

    stm32_exti_trigger(pin, edge);

    stm32_exti_enable(pin);

exit :
    return (err);
}

static int gpio_stm32_manage_callback(const struct device* dev,
                                      struct gpio_callback* callback,
                                      bool set) {
    struct gpio_stm32_data* data = dev->data;

    return (gpio_manage_callback(&data->cb, callback, set));
}

static int gpio_stm32_init(const struct device* dev) {
    struct gpio_stm32_data* data = dev->data;
    int ret;

    data->dev = dev;

    if (!device_is_ready(DEVICE_DT_GET(STM32_CLOCK_CONTROL_NODE))) {
        return (-ENODEV);
    }

    #if (defined(PWR_CR2_IOSV) || defined(PWR_SVMCR_IO2SV)) && \
    DT_NODE_HAS_STATUS(DT_NODELABEL(gpiog), okay)
    z_stm32_hsem_lock(CFG_HW_RCC_SEMID, HSEM_LOCK_DEFAULT_RETRY);
    /* Port G[15:2] requires external power supply */
    /* Cf: L4/L5 RM, Chapter "Independent I/O supply rail" */
    LL_PWR_EnableVddIO2();
    z_stm32_hsem_unlock(CFG_HW_RCC_SEMID);
    #endif
    /* enable port clock (if runtime PM is not enabled) */
    ret = gpio_stm32_clock_request(dev, !IS_ENABLED(CONFIG_PM_DEVICE_RUNTIME));
    if (ret < 0) {
        return (ret);
    }

    if (IS_ENABLED(CONFIG_PM_DEVICE_RUNTIME)) {
        pm_device_init_suspended(dev);
    }
    (void) pm_device_runtime_enable(dev);

    return (0);
}
